force-app/main/default/objects/Medical_Record__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Medical Records</relationshipLabel>
    <relationshipName>Medical_Records</relationshipName>
    <type>Lookup</type>
</CustomField>