force-app/main/default/objects/Medical_Record__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Medical Records</relationshipLabel>
    <relationshipName>Medical_Records</relationshipName>
    <type>Lookup</type>
</CustomField>