force-app/main/default/objects/Medical_Record__c/fields/Diagnosis_Summary__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Summary__c</fullName>
    <label>Diagnosis Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>