force-app/main/default/objects/Medical_Record__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Medical Records</relationshipLabel>
    <relationshipName>Medical_Records</relationshipName>
    <type>Lookup</type>
</CustomField>